Fixing the breadcrumbs z-index - https://www.bugherd.com/projects/168385/tasks/228

--- a/assets/css/scss/layout/_breadcrumb.scss
+++ b/assets/css/scss/layout/_breadcrumb.scss
@@ -11,7 +11,7 @@
 	left: 0;
     right: 0;
 	width: 100%;
-	z-index: 4;
+	z-index: 100000;
 
 	a, span {
 		display: inline-block;
